# hagen-engine-v2

./: CMakeLists.txt  FindLuaJIT.cmake
game/: game.json  style.json
src/: CMakeLists.txt
src/box2d/: CMakeLists.txt  b2_common.h  b2_math.h
src/core/: CMakeLists.txt  JSONUtils.cpp  JSONUtils.hpp  Locale.cpp  Locale.hpp  Logger.cpp  Logger.hpp  Point.hpp  Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  SavesManager.cpp  SavesManager.hpp  Serializer.cpp  Serializer.hpp  Shader.cpp  Shader.hpp  Storage.cpp  Storage.hpp  String.cpp  String.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp  Utility.cpp  Utility.hpp
src/editor/: Body.cpp  Body.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Chain.cpp  Chain.hpp  Circle.cpp  Circle.hpp  Colors.cpp  Colors.hpp  Directory.hpp  DistanceJoint.cpp  DistanceJoint.hpp  Edge.cpp  Edge.hpp  EditMenu.cpp  EditMenu.hpp  EditorApp.cpp  EditorApp.hpp  EditorMain.cpp  EditorMain.hpp  FilterProperty.cpp  FilterProperty.hpp  Fixture.cpp  Fixture.hpp  GLCanvas.cpp  GLCanvas.hpp  GLUtils.cpp  GLUtils.hpp  Image.cpp  Image.hpp  ImagePanel.cpp  ImagePanel.hpp  ImagePreview.cpp  ImagePreview.hpp  InputGridDialog.cpp  InputGridDialog.hpp  JSONUtils.cpp  JSONUtils.hpp  (+32 more)
src/engine/: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Controls.cpp  Controls.hpp  Engine.cpp  Engine.hpp  GUIConsole.cpp  GUIConsole.hpp  GUISettings.cpp  GUISettings.hpp  GameConfig.cpp  GameConfig.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Interface.cpp  Interface.hpp  Level.cpp  Level.hpp  RenderManager.cpp  RenderManager.hpp  Settings.cpp  Settings.hpp  Style.cpp  Style.hpp  b2_user_settings.h  main.cpp
src/glad/: CMakeLists.txt  glad.c  glad.h
src/imgui/: CMakeLists.txt
